adding a local redis server 5